Synchronized Advanced Diploma Year 1 syllabus with 1-Year Diploma and added detailed Year 2 curriculum

--- a/advanced-diploma-fashion.html
+++ b/advanced-diploma-fashion.html
@@ -160,51 +160,127 @@
             </div>
 
             <div class="row g-4">
+                <!-- Module 1: Fashion Illustration -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
                         <div class="module-number">01</div>
                         <h4 class="text-gold mb-3">Fashion Illustration</h4>
+                        <div class="small text-muted mb-3 italic">Fundamental drawing, shading, and rendering fashion
+                            figures and garments.</div>
                         <ul class="list-unstyled text-muted small">
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> 2D & 3D Shape/Form
-                                Mastery</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> Color Theory & Harmonies
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> <strong>Basics:</strong>
+                                Shading, 2D/3D Forms, Value & Pointing</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> <strong>Theory:</strong>
+                                Color Wheel, Tints/Tones, Schemes</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Principles:</strong> Rendering strokes, Motifs, Repeats
                             </li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> 10-Head Fashion Croquis
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Croquis:</strong> 10-Head Figure, Flesh figure, Poses
                             </li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> Garment Category
-                                Rendering</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Categories:</strong> Casual, Formal, Ethnic, Beach wear
+                            </li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+
+                <!-- Module 2: Pattern Making -->
+                <div class="col-md-6 col-lg-8">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
                         <div class="module-number">02</div>
-                        <h4 class="text-gold mb-3">Pattern Making</h4>
-                        <ul class="list-unstyled text-muted small">
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> Kids Wear: Frocks &
-                                Lehangas</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> Women's Kurthis (Types
-                                1-4)</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> Blouse Construction (7
-                                Types)</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> Bottom Wear &
-                                Patiala/Palazzo</li>
-                        </ul>
+                        <h4 class="text-gold mb-3">Pattern Making & Construction</h4>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h6 class="text-dark fw-bold mb-2">Kids Wear</h6>
+                                <ul class="list-unstyled text-muted small">
+                                    <li class="mb-1"><i class="fas fa-caret-right text-gold me-2"></i> Kids Kurthi &
+                                        Long Frock</li>
+                                    <li class="mb-1"><i class="fas fa-caret-right text-gold me-2"></i> Lehanga & Jump
+                                        Suits</li>
+                                    <li class="mb-1"><i class="fas fa-caret-right text-gold me-2"></i> Basic & Hand
+                                        Seams</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <h6 class="text-dark fw-bold mb-2">Women's Wear</h6>
+                                <ul class="list-unstyled text-muted small">
+                                    <li class="mb-1"><i class="fas fa-caret-right text-gold me-2"></i> Kurthi & Frocks
+                                        (Types 1-4)</li>
+                                    <li class="mb-1"><i class="fas fa-caret-right text-gold me-2"></i> Blouses (7
+                                        Styles) & Bottoms</li>
+                                    <li class="mb-1"><i class="fas fa-caret-right text-gold me-2"></i> Patiala, Palazzo,
+                                        Straight Pants</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
+                <!-- Module 3: Embroidery -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
                         <div class="module-number">03</div>
-                        <h4 class="text-gold mb-3">Embroidery & Digital</h4>
+                        <h4 class="text-gold mb-3">Embroidery & Styling</h4>
                         <ul class="list-unstyled text-muted small">
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> 25+ Basic & Advanced
-                                Stitches</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> Professional Saree
-                                Draping</li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> Adobe Illustrator Basics
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> <strong>Basic
+                                    Stitches:</strong> Stem, Chain, Satin, Split</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Advanced:</strong> Zardosi, French Knots, Woven Rose
                             </li>
-                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> Motif & Repeat
-                                Development</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> <strong>Aari
+                                    Work:</strong> Specialized techniques</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Hairstyles:</strong> French Braid, Buns, Free styles
+                            </li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> <strong>Art:</strong>
+                                Smocking, Appliqué, Calendar Art</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Module 4: Beautician -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="syllabus-card p-4 custom-shadow position-relative">
+                        <div class="module-number">04</div>
+                        <h4 class="text-gold mb-3">Professional Beautician</h4>
+                        <ul class="list-unstyled text-muted small">
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Grooming:</strong> High-end Threading, Facial
+                            </li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> <strong>Makeup:</strong>
+                                Daily & Occasional Make-up Art</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> <strong>Saree:</strong>
+                                Draping (2 styles) & Pre-pleating</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> <strong>Henna
+                                    Art:</strong> Professional Mehandi Designs</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> <strong>Crafts:</strong>
+                                Professional Flower making</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Module 5: Adobe Illustrator -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="syllabus-card p-4 custom-shadow position-relative">
+                        <div class="module-number">05</div>
+                        <h4 class="text-gold mb-3">Digital Fashion (AI)</h4>
+                        <ul class="list-unstyled text-muted small">
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Digital:</strong> Intro to Adobe Illustrator tools
+                            </li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Repeats:</strong> Brick, Ogee, Tossed patterns
+                            </li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Projects:</strong> Flat sketches, Trouser, Blazers
+                            </li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Boutique:</strong> Logo, Business card, Spec-sheets
+                            </li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Effects:</strong> Pearl/Sequence Jewelry rendering
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -227,7 +303,7 @@
                 <!-- Advanced Illustration -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">04</div>
+                        <div class="module-number">06</div>
                         <h4 class="text-gold mb-3">Adv. Illustration <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Kids 6-Head Croquis & Portfolio
@@ -245,7 +321,7 @@
                 <!-- Advanced Pattern Making -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">05</div>
+                        <div class="module-number">07</div>
                         <h4 class="text-gold mb-3">Tailoring Mastery <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Men's Shirt & Pant Tailoring
@@ -263,7 +339,7 @@
                 <!-- Advanced Embroidery & Themes -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">06</div>
+                        <div class="module-number">08</div>
                         <h4 class="text-gold mb-3">Theme Designing <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Festival & Calendar Theme Design
@@ -280,7 +356,7 @@
                 <!-- Advanced Beautician -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">07</div>
+                        <div class="module-number">09</div>
                         <h4 class="text-gold mb-3">Bridal Artistry <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Bridal Makeup & Diamond Facial
@@ -296,7 +372,7 @@
                 <!-- Theory & Business -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">08</div>
+                        <div class="module-number">10</div>
                         <h4 class="text-gold mb-3">Fashion Business <span class="advanced-tag">Industry</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Merchandising & Manufacturing
@@ -314,7 +390,7 @@
                 <!-- Digital Mastery & Soft Skills -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">09</div>
+                        <div class="module-number">11</div>
                         <h4 class="text-gold mb-3">Experience Hub <span class="advanced-tag">Career</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Adobe: Garment & Photo Editing
@@ -328,7 +404,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- Call to Action -->
             <div class="row mt-5 pt-5">
                 <div class="col-12 text-center">
