Added dedicated syllabus pages for 3-Month Tailoring and Beautician courses

--- a/index.html
+++ b/index.html
@@ -226,22 +226,30 @@
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-3">
-                    <div class="course-card custom-shadow h-100">
-                        <div class="p-4 bg-white text-center">
-                            <h5 class="text-dark fw-bold mb-3">Diploma in Beautician</h5>
-                            <hr class="gold-hr mx-auto">
-                            <p class="badge bg-gold text-dark px-3 py-2">6 Months</p>
+                    <a href="diploma-beautician.html" class="text-decoration-none h-100 d-block">
+                        <div class="course-card custom-shadow h-100">
+                            <div class="p-4 bg-white text-center">
+                                <h5 class="text-dark fw-bold mb-3">Diploma in Beautician</h5>
+                                <hr class="gold-hr mx-auto">
+                                <p class="badge bg-gold text-dark px-3 py-2">3 Months</p>
+                                <div class="mt-3 small text-gold fw-bold">View Syllabus <i
+                                        class="fas fa-arrow-right ms-1"></i></div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-6 col-lg-3">
-                    <div class="course-card custom-shadow h-100">
-                        <div class="p-4 bg-white text-center">
-                            <h5 class="text-dark fw-bold mb-3">Diploma in Tailoring</h5>
-                            <hr class="gold-hr mx-auto">
-                            <p class="badge bg-gold text-dark px-3 py-2">3 Months</p>
+                    <a href="diploma-tailoring.html" class="text-decoration-none h-100 d-block">
+                        <div class="course-card custom-shadow h-100">
+                            <div class="p-4 bg-white text-center">
+                                <h5 class="text-dark fw-bold mb-3">Diploma in Tailoring</h5>
+                                <hr class="gold-hr mx-auto">
+                                <p class="badge bg-gold text-dark px-3 py-2">3 Months</p>
+                                <div class="mt-3 small text-gold fw-bold">View Syllabus <i
+                                        class="fas fa-arrow-right ms-1"></i></div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
