Added 'Art & Craft' module to 1-Year and 2-Year syllabi, and re-indexed Year 2 modules

--- a/diploma-fashion.html
+++ b/diploma-fashion.html
@@ -268,6 +268,24 @@
                         </ul>
                     </div>
                 </div>
+
+                <!-- Module 6: Art & Craft -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="syllabus-card p-4 syllabus-item custom-shadow">
+                        <div class="module-number">06</div>
+                        <h4 class="text-gold mb-3">Art & Craft</h4>
+                        <ul class="list-unstyled text-muted small">
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Painting:</strong> Glass, Fabric, Pastel, Dot, One Stroke</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Traditional:</strong> Tanjore, Kalamkari, Lippan Art, Tie & Dye</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Crafts:</strong> Liquid Embroidery, Clay Jewellery, Mixed Media</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Projects:</strong> Photo Frame, Pipe Vase, Bird Pin Cushion</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
 
             <div class="row mt-5 pt-4">
