--- a/advanced-diploma-fashion.html
+++ b/advanced-diploma-fashion.html
@@ -284,6 +284,27 @@
                         </ul>
                     </div>
                 </div>
+
+                <!-- Module 6: Art & Craft -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="syllabus-card p-4 custom-shadow position-relative">
+                        <div class="module-number">06</div>
+                        <h4 class="text-gold mb-3">Art & Craft</h4>
+                        <ul class="list-unstyled text-muted small">
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Painting:</strong> Glass, Fabric, Pastel, Dot, One Stroke
+                            </li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Traditional:</strong> Tanjore, Kalamkari, Lippan Art, Tie & Dye
+                            </li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> <strong>Crafts:</strong>
+                                Liquid Embroidery, Clay Jewellery, Mixed Media</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Projects:</strong> Photo Frame, Pipe Vase, Bird Pin Cushion
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
 
             <!-- Phase 2: Year 2 Curriculum -->
@@ -303,7 +324,7 @@
                 <!-- Advanced Illustration -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">06</div>
+                        <div class="module-number">07</div>
                         <h4 class="text-gold mb-3">Adv. Illustration <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Kids 6-Head Croquis & Portfolio
@@ -321,7 +342,7 @@
                 <!-- Advanced Pattern Making -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">07</div>
+                        <div class="module-number">08</div>
                         <h4 class="text-gold mb-3">Tailoring Mastery <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Men's Shirt & Pant Tailoring
@@ -339,7 +360,7 @@
                 <!-- Advanced Embroidery & Themes -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">08</div>
+                        <div class="module-number">09</div>
                         <h4 class="text-gold mb-3">Theme Designing <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Festival & Calendar Theme Design
@@ -356,7 +377,7 @@
                 <!-- Advanced Beautician -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">09</div>
+                        <div class="module-number">10</div>
                         <h4 class="text-gold mb-3">Bridal Artistry <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Bridal Makeup & Diamond Facial
@@ -372,7 +393,7 @@
                 <!-- Theory & Business -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">10</div>
+                        <div class="module-number">11</div>
                         <h4 class="text-gold mb-3">Fashion Business <span class="advanced-tag">Industry</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Merchandising & Manufacturing
@@ -390,7 +411,7 @@
                 <!-- Digital Mastery & Soft Skills -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">11</div>
+                        <div class="module-number">12</div>
                         <h4 class="text-gold mb-3">Experience Hub <span class="advanced-tag">Career</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Adobe: Garment & Photo Editing
