Added dedicated 'Advanced Artistry' module to Year 2 syllabus

--- a/advanced-diploma-fashion.html
+++ b/advanced-diploma-fashion.html
@@ -357,10 +357,28 @@
                     </div>
                 </div>
 
-                <!-- Advanced Embroidery & Themes -->
+                <!-- Advanced Artistry -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
                         <div class="module-number">09</div>
+                        <h4 class="text-gold mb-3">Advanced Artistry <span class="advanced-tag">Creative</span></h4>
+                        <ul class="list-unstyled text-muted small">
+                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Traditional:</strong>
+                                Tanjore, Kerala Mural, Pichwai, Madhubani</li>
+                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Painting:</strong> One
+                                Stroke, Free Hand, Figurative Works</li>
+                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Crafts:</strong>
+                                Decoupage Art, Mixed Media</li>
+                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Design:</strong> Saree
+                                Designing</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Advanced Embroidery & Themes -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="syllabus-card p-4 custom-shadow position-relative">
+                        <div class="module-number">10</div>
                         <h4 class="text-gold mb-3">Theme Designing <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Festival & Calendar Theme Design
@@ -377,7 +395,7 @@
                 <!-- Advanced Beautician -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">10</div>
+                        <div class="module-number">11</div>
                         <h4 class="text-gold mb-3">Bridal Artistry <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Bridal Makeup & Diamond Facial
@@ -393,7 +411,7 @@
                 <!-- Theory & Business -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">11</div>
+                        <div class="module-number">12</div>
                         <h4 class="text-gold mb-3">Fashion Business <span class="advanced-tag">Industry</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Merchandising & Manufacturing
@@ -411,7 +429,7 @@
                 <!-- Digital Mastery & Soft Skills -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">12</div>
+                        <div class="module-number">13</div>
                         <h4 class="text-gold mb-3">Experience Hub <span class="advanced-tag">Career</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Adobe: Garment & Photo Editing
