--- a/advanced-diploma-fashion.html
+++ b/advanced-diploma-fashion.html
@@ -427,18 +427,38 @@
                 </div>
 
                 <!-- Digital Mastery & Soft Skills -->
+                <!-- Digital Mastery & Bio-Data -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
                         <div class="module-number">13</div>
-                        <h4 class="text-gold mb-3">Experience Hub <span class="advanced-tag">Career</span></h4>
+                        <h4 class="text-gold mb-3">Digital & Career <span class="advanced-tag">Professional</span></h4>
                         <ul class="list-unstyled text-muted small">
-                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Adobe: Garment & Photo Editing
-                            </li>
-                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Modeling, Backstage & Music</li>
-                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Field Trips & Fabric Analysis
-                            </li>
-                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Seminar & Portfolio Finalization
-                            </li>
+                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Digital:</strong> Adobe
+                                Photoshop & Illustrator</li>
+                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Portfolio:</strong>
+                                Final Collection & Documentation</li>
+                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Skills:</strong>
+                                Seminar, Presentation, Bio-data</li>
+                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Tech:</strong> Garment
+                                Editing & Photo Shoots</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Student Life & Development -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="syllabus-card p-4 custom-shadow position-relative">
+                        <div class="module-number">14</div>
+                        <h4 class="text-gold mb-3">Student Life <span class="advanced-tag">Holistic</span></h4>
+                        <ul class="list-unstyled text-muted small">
+                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Arts:</strong> Music
+                                Class or Guitar Class</li>
+                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Exposure:</strong> Field
+                                Trips & Fabric Sourcing</li>
+                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Wellness:</strong>
+                                Recreational Games & Activities</li>
+                            <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Stage:</strong> Modeling
+                                & Ramp Walk Training</li>
                         </ul>
                     </div>
                 </div>
