Added English Subject to 1-Year (Mod 07) and 2-Year syllabi, re-indexed Advanced Diploma Year 2 modules to start from 08

--- a/diploma-fashion.html
+++ b/diploma-fashion.html
@@ -276,13 +276,35 @@
                         <h4 class="text-gold mb-3">Art & Craft</h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
-                                <strong>Painting:</strong> Glass, Fabric, Pastel, Dot, One Stroke</li>
+                                <strong>Painting:</strong> Glass, Fabric, Pastel, Dot, One Stroke
+                            </li>
                             <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
-                                <strong>Traditional:</strong> Tanjore, Kalamkari, Lippan Art, Tie & Dye</li>
+                                <strong>Traditional:</strong> Tanjore, Kalamkari, Lippan Art, Tie & Dye
+                            </li>
                             <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
-                                <strong>Crafts:</strong> Liquid Embroidery, Clay Jewellery, Mixed Media</li>
+                                <strong>Crafts:</strong> Liquid Embroidery, Clay Jewellery, Mixed Media
+                            </li>
                             <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
-                                <strong>Projects:</strong> Photo Frame, Pipe Vase, Bird Pin Cushion</li>
+                                <strong>Projects:</strong> Photo Frame, Pipe Vase, Bird Pin Cushion
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Module 7: English Subject -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="syllabus-card p-4 syllabus-item custom-shadow">
+                        <div class="module-number">07</div>
+                        <h4 class="text-gold mb-3">English & Communication</h4>
+                        <ul class="list-unstyled text-muted small">
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Fundamentals:</strong> Communication English</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Skills:</strong> Spoken English Training</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Practice:</strong> Group Discussions (GD)</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2 small"></i>
+                                <strong>Professional:</strong> Seminars & Presentations</li>
                         </ul>
                     </div>
                 </div>
