--- a/advanced-diploma-fashion.html
+++ b/advanced-diploma-fashion.html
@@ -305,6 +305,27 @@
                         </ul>
                     </div>
                 </div>
+
+                <!-- Module 7: English Subject -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="syllabus-card p-4 custom-shadow position-relative">
+                        <div class="module-number">07</div>
+                        <h4 class="text-gold mb-3">English & Communication</h4>
+                        <ul class="list-unstyled text-muted small">
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Fundamentals:</strong> Communication English
+                            </li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i> <strong>Skills:</strong>
+                                Spoken English Training</li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Practice:</strong> Group Discussions (GD)
+                            </li>
+                            <li class="mb-2"><i class="fas fa-check-circle text-gold me-2"></i>
+                                <strong>Professional:</strong> Seminars & Presentations
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
 
             <!-- Phase 2: Year 2 Curriculum -->
@@ -324,7 +345,7 @@
                 <!-- Advanced Illustration -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">07</div>
+                        <div class="module-number">08</div>
                         <h4 class="text-gold mb-3">Adv. Illustration <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Kids 6-Head Croquis & Portfolio
@@ -342,7 +363,7 @@
                 <!-- Advanced Pattern Making -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">08</div>
+                        <div class="module-number">09</div>
                         <h4 class="text-gold mb-3">Tailoring Mastery <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Men's Shirt & Pant Tailoring
@@ -360,7 +381,7 @@
                 <!-- Advanced Artistry -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">09</div>
+                        <div class="module-number">10</div>
                         <h4 class="text-gold mb-3">Advanced Artistry <span class="advanced-tag">Creative</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Traditional:</strong>
@@ -378,7 +399,7 @@
                 <!-- Advanced Embroidery & Themes -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">10</div>
+                        <div class="module-number">11</div>
                         <h4 class="text-gold mb-3">Theme Designing <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Festival & Calendar Theme Design
@@ -395,7 +416,7 @@
                 <!-- Advanced Beautician -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">11</div>
+                        <div class="module-number">12</div>
                         <h4 class="text-gold mb-3">Bridal Artistry <span class="advanced-tag">Advanced</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Bridal Makeup & Diamond Facial
@@ -411,7 +432,7 @@
                 <!-- Theory & Business -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">12</div>
+                        <div class="module-number">13</div>
                         <h4 class="text-gold mb-3">Fashion Business <span class="advanced-tag">Industry</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> Merchandising & Manufacturing
@@ -430,7 +451,7 @@
                 <!-- Digital Mastery & Bio-Data -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">13</div>
+                        <div class="module-number">14</div>
                         <h4 class="text-gold mb-3">Digital & Career <span class="advanced-tag">Professional</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Digital:</strong> Adobe
@@ -448,7 +469,7 @@
                 <!-- Student Life & Development -->
                 <div class="col-md-6 col-lg-4">
                     <div class="syllabus-card p-4 custom-shadow position-relative">
-                        <div class="module-number">14</div>
+                        <div class="module-number">15</div>
                         <h4 class="text-gold mb-3">Student Life <span class="advanced-tag">Holistic</span></h4>
                         <ul class="list-unstyled text-muted small">
                             <li class="mb-2"><i class="fas fa-star text-gold me-2"></i> <strong>Arts:</strong> Music
