Added admissions open banner for 2026-2027

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <!-- Top Announcement Ticker -->
     <div class="top-ticker">
         <div class="ticker-content">
-            <span>ADMISSIONS ARE OPEN FOR THE 2026 ACADEMIC YEAR • ENROLL NOW • CALL: 77998 02224 • ONLY
+            <span>ADMISSIONS ARE OPEN FOR THE 2026-2027 ACADEMIC YEAR • ENROLL NOW • CALL: 77998 02224 • ONLY
                 FOR LADIES • PIONEER IN RAYALASEEMA &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-            <span>ADMISSIONS ARE OPEN FOR THE 2026 ACADEMIC YEAR • ENROLL NOW • CALL: 77998 02224• ONLY
+            <span>ADMISSIONS ARE OPEN FOR THE 2026-2027 ACADEMIC YEAR • ENROLL NOW • CALL: 77998 02224• ONLY
                 FOR LADIES • PIONEER IN RAYALASEEMA &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
         </div>
     </div>
